Fix spacing

--- a/css/controller.css
+++ b/css/controller.css
@@ -59,7 +59,6 @@
 
         .qr-line {
             display: inline;
-            margin-left: 8px;
         }
 
         .version-line::after {
@@ -358,7 +357,6 @@
 
             .qr-line {
                 display: inline;
-                margin-left: 8px;
             }
 
             .version-line::after {
